@@ -1,3 +1,10 @@
+2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk.
+
+	* pandora_console/include/functions_db.php: fixed in the function
+	"get_agent_modules" extract the agents when the current user user is admin.
+
 2011-02-23  Sergio Martin <sergio.martin@artica.es>
 
 	* include/languages/es.po
